kubernetes-config/allow-web-traffic.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: allow-web-traffic
spec:
  podSelector:
    matchLabels:
      app: events-website
  ingress:
  - from:
    - ipBlock:
       cidr: '0.0.0.0/0'
